Adding .js files w/link in .html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instant Weather</title>
+    <script scr="api_meteo.js" defer></script>
+    <script scr="api_commune.js" defer></script>
 </head>
 <body>
     
