Adding html base and editing sources link for js

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instant Weather</title>
-    <script scr="api_meteo.js" defer></script>
-    <script scr="api_commune.js" defer></script>
+    <script scr="js/api_meteo.js" defer></script>
+    <script scr="js/api_commune.js" defer></script>
 </head>
 <body>
-    
+    <h1>Instant Weather</h1>
+    <div class="search_framework">
+        <h2>La météo en direct de votre ville :</h2>
+        <form id="city_searching">
+            <label for="postal_code">Entrez un code postal : </label>
+            <input type="number" id="postal_code" min="00900" max="99999" value="Exemple : 14000">
+        </form>
+    </div>
 </body>
 </html>
