--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <div class="search_framework">
         <h2>La météo en direct de votre ville :</h2>
         <form id="city_searching">
-            <label for="postal_code">Entrez un code postal : </label>
-            <input type="number" id="postal_code" placeholder="Exemple : 14000">
+            <div class="input-group">
+                <label for="postal_code">Entrez un code postal :</label>
+                <input type="number" id="postal_code" placeholder="Exemple : 14000">
+            </div>
+            <button id="researching">Rechercher</button>
         </form>
     </div>
 </body>
