--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instant Weather</title>
-    <script scr="js/api_meteo.js" defer></script>
-    <script scr="js/api_commune.js" defer></script>
+    <script src="js/api_meteo.js" defer></script>
+    <script src="js/api_commune.js" defer></script>
 </head>
 <body>
     <h1>Instant Weather</h1>
@@ -15,6 +15,10 @@
             <label for="postal_code">Entrez un code postal : </label>
             <input type="number" id="postal_code" min="00900" max="99999" value="Exemple : 14000">
         </form>
+    </div>
+    <div id="dropDownCard">
+
+        
     </div>
 </body>
 </html>
