--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <h1>Instant Weather</h1>
     <div class="search_framework">
         <h2>La météo en direct de votre ville :</h2>
-        <form id="city_searching">
+        <form id="city_searching" onsubmit="return false;">
             <div class="input-group">
                 <label for="postal_code">Entrez un code postal :</label>
                 <input type="number" id="postal_code" placeholder="Exemple : 14000">
+            </div>
+            <div class="drop_down_list">
+            
             </div>
             <button id="researching">Rechercher</button>
         </form>
