--- a/index.html
+++ b/index.html
@@ -18,15 +18,10 @@
                 <label for="postal_code">Entrez un code postal :</label>
                 <input type="number" id="postal_code" placeholder="Exemple : 14000">
             </div>
-            <div class="drop_down_list">
-            
-            </div>
+            <div class="drop_down_list"></div>
             <button id="searchBtn">Rechercher</button>
         </form>
     </div>
-    <div id="dropDownCard">
-
-        
-    </div>
+    <div id="dropDownCard"></div>
 </body>
 </html>
