--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form id="city_searching" onsubmit="return false;">
             <div class="input-group">
                 <label for="postal_code">Entrez un code postal :</label>
-                <input type="number" id="postal_code" placeholder="Exemple : 14000">
+                <input type="number" id="postal_code" min="01000" placeholder="Exemple : 14000">
             </div>
             <div class="drop_down_list"></div>
             <button id="searchBtn">Rechercher</button>
