css/html change

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="drop_down_list">
             
             </div>
-            <button id="searchBtn">Rechercher</button>
+            <button type="button" id="searchBtn" disabled>Rechercher</button>
         </form>
     </div>
     <div id="dropDownCard">
