--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>La météo en direct de votre ville :</h2>
         <form id="city_searching" onsubmit="return false;">
             <div class="input-group">
-                <label for="postal_code">Entrez un code postal :</label>
+                <label for="postal_code" id="label_style">Entrez un code postal :</label>
                 <input type="number" id="postal_code" min="01000" placeholder="Exemple : 14000">
             </div>
             <div class="drop_down_list">
