--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <button type="button" id="searchBtn" disabled>Rechercher</button>
         </form>
     </div>
-    <div id="dropDownCard"></div>
+    <div id="dropDownCard">
+        
+    </div>
 </body>
 </html>
