Adding error message if incorrect postal_code

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <div class="drop_down_list">
                 
             </div>
+            <div class="errorWarning">
+                <p id="p_error"></p>
+            </div>
             <button type="button" id="searchBtn" disabled>Rechercher</button>
         </form>
     </div>
