--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
 <body>
     <h1>Instant Weather</h1>
-    <div class="search_framework">
+    <div id="search_framework">
         <h2>La météo en direct de votre ville :</h2>
         <form id="city_searching" onsubmit="return false;">
-            <div class="input-group">
+            <div id="input-group">
                 <label for="postal_code" id="label_style">Entrez un code postal :</label>
                 <input type="number" id="postal_code" min="01000" placeholder="Exemple : 14000">
             </div>
-            <div class="drop_down_list">
+            <div id="drop_down_list">
                 
             </div>
-            <div class="errorWarning">
+            <div id="errorWarning">
                 <p id="p_error"></p>
             </div>
             <button type="button" id="searchBtn" disabled>Rechercher</button>
