Added FontAwesome & Favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="js/api_meteo.js" defer></script>
     <script src="js/api_commune.js" defer></script>
     <title>Instant Weather</title>
+    <link rel="icon" type="image/x-icon" href="/img/cloudy.ico">
+    <script src="https://kit.fontawesome.com/7509b7dacb.js" crossorigin="anonymous" defer></script> <!-- // Font Awesome-->
 </head>
 
 <body>
