--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Neuton&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Neuton&family=Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Neuton&family=Noto+Sans+JP:wght@200&family=Open+Sans&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
