--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/weather-icons.min.css">
-    <script src="js/api_meteo.js" defer></script>
+    <script type="module" src="js/api_meteo.js" defer></script>
     <script src="js/api_commune.js" defer></script>
     <title>Instant Weather</title>
 </head>
