Added an option to select the number of days to be displayed (bug to be fixed: press once on the day selection).

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     
                 </div>
 
+                <div id="select_a_day_nb">
+                    
+                </div>
+
                 <div id="errorWarning">
                     <p id="p_error"></p>
                 </div>
