Fixing wave errors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
 
     <body>
-        <h1 id="title">Instant Weather</h1>
+        <header><h1 id="title">Instant Weather</h1></header>
 
         <div id="search_framework">
             <h2 id="web_site_description">La météo en direct de votre ville :</h2>
