Added CSS (responsive) to weather maps for displaying selectable elements with checkbox

--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
                             <p id="modalTitle">Que voulez-vous afficher ?</p>
 
                             <p>
-                                <label for="latitude" id="latitude_label">Latitude décimale de la commune</label>
+                                <label for="latitude" id="latitude">Latitude décimale de la commune</label>
                                 <input type="checkbox" id="latitude_checkbox">
                             </p>
     
                             <p>
-                                <label for="longitude" id="longitude_label">Longitude décimale de la commune</label>
+                                <label for="longitude" id="longitude">Longitude décimale de la commune</label>
                                 <input type="checkbox" id="longitude_checkbox">
-                            </p>
-    
-                            <p>
-                                <label for="rain_quantity" id="rain_quantity_label">Cumul de pluie sur la journée en mm</label>
-                                <input type="checkbox" id="rain_quantity_checkbox">
                             </p>
 
                             <p>
-                                <label for="wind_speed" id="wind_speed_label">Vent moyen à 10 mètres en km/h</label>
+                                <label for="wind_speed" id="vent_moyen">Vent moyen à 10 mètres en km/h</label>
                                 <input type="checkbox" id="wind_speed_checkbox">
                             </p>
 
                             <p>
-                                <label for="wind_angle" id="wind_angle_label">Direction du vent en degrés (0 à 360°)</label>
+                                <label for="wind_angle" id="direction_vent">Direction du vent en degrés (0 à 360°)</label>
                                 <input type="checkbox" id="wind_angle_checkbox">
+                            </p>
+
+                            <p>
+                                <label for="rain_quantity" id="direction_vent">Cumul de pluie sur la journée en mm</label>
+                                <input type="checkbox" id="rain_quantity_checkbox">
                             </p>
                         </div>
 
