last minute commit to fix the background

--- a/index.html
+++ b/index.html
@@ -44,31 +44,31 @@
 
                 <div id="button_settings_display">
 
+                    <button type="button" id="searchBtn" disabled>Rechercher</button>
                     <div id="button_container">
-                        <button title="Plus d'options" type="button" id="settings_button"><em class="fa-solid fa-gear fa-2xl"></em></button>
-                        <button type="button" id="searchBtn" disabled>Rechercher</button>
+                        <button title="Plus d'options" type="button" id="settings_button"><em class="fa-solid fa-gear fa-2xl"></em> Options :</button>
                     </div>
                     
                     <div id="settings">
-                        <p id="settings_title" class="bold">Options supplémentaires :</p>
+                        <h3 id="settings_title" class="bold">Options supplémentaires :</h3>
             
-                        <label for="latitude" class="checkbox-label" id="label_input_style"><input type="checkbox" id="latitude_checkbox">
+                        <label for="latitude_checkbox" class="checkbox-label" id="label_input_style"><input type="checkbox" id="latitude_checkbox">
                             Latitude décimale de la commune
                         </label>
-                        <br>
-                        <label for="longitude" class="checkbox-label" id="label_input_style"><input type="checkbox" id="longitude_checkbox">
+
+                        <label for="longitude_checkbox" class="checkbox-label" id="label_input_style"><input type="checkbox" id="longitude_checkbox">
                             Longitude décimale de la commune
                         </label>
-                        <br>
-                        <label for="wind_speed" class="checkbox-label" id="label_input_style"><input type="checkbox" id="wind_speed_checkbox">
+
+                        <label for="wind_speed_checkbox" class="checkbox-label" id="label_input_style"><input type="checkbox" id="wind_speed_checkbox">
                             Vent moyen à 10 mètres en km/h
                         </label>
                         <br>
-                        <label for="wind_angle" class="checkbox-label" id="label_input_style"><input type="checkbox" id="wind_angle_checkbox">
+                        <label for="wind_angle_checkbox" class="checkbox-label" id="label_input_style"><input type="checkbox" id="wind_angle_checkbox">
                             Direction du vent en degrés (0 à 360°)
                         </label>
-                        <br>
-                        <label for="rain_quantity" class="checkbox-label" id="label_input_style"><input type="checkbox" id="rain_quantity_checkbox">
+
+                        <label for="rain_quantity_checkbox" class="checkbox-label" id="label_input_style"><input type="checkbox" id="rain_quantity_checkbox">
                             Cumul de pluie sur la journée en mm
                         </label>
 
