--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="js/api_commune.js" async></script> <!-- Fichier JavaScript pour l'API des communes -->
         <script src="js/settings.js" async></script> <!-- Fichier JavaScript pour les options supplémentaires -->
         <title>Instant Weather</title>
-        <link rel="icon" type="image/x-icon" href="/img/cloudy.ico"> <!-- Icône de la page -->
+        <link rel="icon" type="image/x-icon" href="img/cloudy.ico"> <!-- Icône de la page -->
         <script src="https://kit.fontawesome.com/7509b7dacb.js" crossorigin="anonymous" defer></script> <!-- Font Awesome -->
         <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Connexion préalable à Google Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
